kubernetes/apps/authelia/authelia/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: authelia
  labels:
    app: authelia
spec:
  type: ClusterIP
  selector:
    app: authelia
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
