kubernetes/apps/authelia/authelia/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  hostnames:
    - auth.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: authelia
          namespace: authelia
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
